# file-storage

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml  run.ps1
integration-test/: .gitignore  main_test.py  manual.py  random_image.sh  requirements.txt
integration_test/: Cargo.toml
integration_test/src/: lib.rs
src/: auth.rs  backend.rs  basic.rs  config.rs  context.rs  main.rs
src/backend/: mongodb.rs  types.rs
src/basic/: auth.rs
