[package]
name = "file-storage"
version = "0.1.0"
edition = "2021"
default-run = "file-storage"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nats = {version = "0.23.0", optional = true}

mongodb = {version = "2.3.0", optional = true}
mongodb-gridfs = {version = "0.2.2", features = ["tokio-runtime"], optional = true}

tokio = {version = "1.20", features = ["full"]}
futures = "0.3"
async-compat = "0.2"
warp = "0.3"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
tokio-util = { version = "0.7.3", features = ["io"] }
log = "0.4"
pretty_env_logger = "0.4"
jsonwebtoken = { version = "8.1", default-features = false }
base64 = "0.13"
zeroize = { version = "1.5.7", features = ["zeroize_derive"] }
envy = "0.4.2"


[features]
default = ["mongodb-backend"]
mongodb-backend = ["mongodb", "mongodb-gridfs"]
