[package]
name = "integration_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.24"
indicatif = { version = "0.17.0", features = ["tokio"] }
mime_guess = "2.0.4"
reqwest = { version = "0.11.11", features = ["stream", "json"] }
serde_json = "1.0.85"
tokio = { version = "1.21.0", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["io"] }
